# pointcloud_person_orientation_estimation

./: README.md
classifier/: CMakeLists.txt  package.xml
classifier/data/orientation_examples/: p0-jacke-Kinect4-169-Take1_cloud.pcd  p0-jacke-Kinect4-169-Take1_pose.txt  p0-jacke-Kinect4-170-Take1_cloud.pcd  p0-jacke-Kinect4-170-Take1_pose.txt  p0-jacke-Kinect4-171-Take1_cloud.pcd  p0-jacke-Kinect4-172-Take1_cloud.pcd  p0-jacke-Kinect4-172-Take1_pose.txt  p0-jacke-Kinect4-173-Take1_cloud.pcd  p0-jacke-Kinect4-173-Take1_pose.txt  p0-jacke-Kinect4-175-Take1_cloud.pcd  p0-jacke-Kinect4-175-Take1_pose.txt  p0-jacke-Kinect4-176-Take1_cloud.pcd  p0-jacke-Kinect4-176-Take1_pose.txt  p0-jacke-Kinect4-177-Take1_cloud.pcd  p0-jacke-Kinect4-177-Take1_pose.txt  p0-jacke-Kinect4-179-Take1_cloud.pcd  p0-jacke-Kinect4-179-Take1_pose.txt  p0-jacke-Kinect4-180-Take1_cloud.pcd  p0-jacke-Kinect4-180-Take1_pose.txt  p0-jacke-Kinect4-182-Take1_cloud.pcd  p0-jacke-Kinect4-182-Take1_pose.txt  p0-jacke-Kinect4-183-Take1_cloud.pcd  p0-jacke-Kinect4-183-Take1_pose.txt  p0-jacke-Kinect4-184-Take1_cloud.pcd  p0-jacke-Kinect4-184-Take1_pose.txt  p0-jacke-Kinect4-185-Take1_cloud.pcd  p0-jacke-Kinect4-185-Take1_pose.txt  p0-jacke-Kinect4-186-Take1_cloud.pcd  p0-jacke-Kinect4-186-Take1_pose.txt  p0-jacke-Kinect4-188-Take1_cloud.pcd  p0-jacke-Kinect4-188-Take1_pose.txt  p0-jacke-Kinect4-190-Take1_cloud.pcd  p0-jacke-Kinect4-190-Take1_pose.txt  p0-jacke-Kinect4-191-Take1_cloud.pcd  p0-jacke-Kinect4-191-Take1_pose.txt  p0-jacke-Kinect4-192-Take1_cloud.pcd  p0-jacke-Kinect4-192-Take1_pose.txt  p0-jacke-Kinect4-193-Take1_cloud.pcd  p0-jacke-Kinect4-193-Take1_pose.txt  p0-jacke-Kinect4-194-Take1_cloud.pcd  (+35 more)
classifier/launch/: orientation_visualization.launch  orientation_visualization.rviz  visualization.launch
classifier/learned_models/precise/: 0_top_down_classifier_optimized.yaml  112_top_down_classifier_optimized.yaml  135_top_down_classifier_optimized.yaml  157_top_down_classifier_optimized.yaml  180_top_down_classifier_optimized.yaml  202_top_down_classifier_optimized.yaml  225_top_down_classifier_optimized.yaml  22_top_down_classifier_optimized.yaml  247_top_down_classifier_optimized.yaml  270_top_down_classifier_optimized.yaml  292_top_down_classifier_optimized.yaml  315_top_down_classifier_optimized.yaml  337_top_down_classifier_optimized.yaml  45_top_down_classifier_optimized.yaml  67_top_down_classifier_optimized.yaml  90_top_down_classifier_optimized.yaml  optimize_classifier_model.py  optimizer.sh  top_down_multiclass_classifier.yaml
classifier/scripts/: orientation_example.sh  orientation_example_precise.sh
classifier/src/pointcloud_orientation_estimation/: classifier.cpp  classifier.h  cloud_preprocessing.cpp  cloud_preprocessing.h  common.h  volume_visualizer.cpp
classifier/src/pointcloud_orientation_estimation/nodes/: classify_single_cloud.cpp  dump_features.cpp  orientation_estimation_example.cpp  test_classifier.cpp  test_multiclass_classifier.cpp  train.cpp
