<?xml version="1.0"?>
<package>

  <name>pointcloud_person_orientation_estimation</name>
  <version>0.0.1</version>
  <description>todo</description>

  <maintainer email="tim.wengefeld@tu-ilmenau.de">Tim Wengefeld</maintainer>

  <license>BSD</license>

  <author email="tim.wengefeld@tu-ilmenau.de">Tim Wengefeld</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>

</package>
